--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ NODE_ENV=development
 
 # Base URL Configuration
 BASE_URL_DEV=http://localhost:5000
-BASE_URL_PROD=http://localhost:5000/
+BASE_URL_PROD=http://localhost:5000
+BASE_URL=http://localhost:5000
 
 # MongoDB Configuration
 MONGODB_URI="mongodb+srv://stream:telvinteum@stream.o3qip.mongodb.net/?retryWrites=true&w=majority&appName=stream"
