FIXING THE BASE URL

--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@
 PORT=5000
 NODE_ENV=development
 
-# Base URL Configuration (simplified)
+# Base URL Configuration
 BASE_URL=http://localhost:5000
+PRODUCTION_URL=https://booking-1q1g.onrender.com
 
 # MongoDB Configuration
 MONGODB_URI="mongodb+srv://stream:telvinteum@stream.o3qip.mongodb.net/?retryWrites=true&w=majority&appName=stream"
@@ -21,5 +22,4 @@ EMAIL_FROM_NAME=EventSys
 EMAIL_FROM_ADDRESS=noreply@eventsys.com
 
 # Render Deployment Configuration
-RENDER_EXTERNAL_URL=your-app-name.onrender.com
-RENDER_EXTERNAL_HOSTNAME=your-app-name.onrender.com
+RENDER_EXTERNAL_URL=booking-1q1g.onrender.com
